--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ section {
 }
 
 #page-1, nav a:nth-of-type(1) {
-    background-color: yellow;
+    background-color: rgb(255, 230, 0);
 }
 
 #page-2, nav a:nth-of-type(2) {
