--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,15 @@ body {
 
 section {
     color: #fff;
-    font-size: 1.5em;
     font-weight: 800;
     height: 100vh;
 }
 
 #page-1, nav a:nth-of-type(1) {
-    background-color: rgb(255, 230, 0);
-}
-
-#page-2, nav a:nth-of-type(2) {
     background-color: #8e44ad;
 }
 
-#page-3, nav a:nth-of-type(3) {
-    background-color: #e74c3c;
-}
-
-#page-4, nav a:nth-of-type(4) {
+#page-2, nav a:nth-of-type(2) {
     background-color: #2980b9;
 }
 
@@ -36,6 +27,7 @@ nav {
     right: 0;
     transform: translateY(-50%);
     grid-area: nav;
+    margin: 0 2% 0 6%;
 }
 
 nav a {
@@ -68,8 +60,9 @@ nav a {
     'header header header'
     'main text  nav'
     'footer  footer footer';
-    grid-template-columns: 2fr 1fr 0.5fr;
-    grid-template-rows: 20% 60% 20%;
+    grid-template-columns: 60% 30% 10%;
+    grid-template-rows: 20% 50% 30%;
+    gap: 5px;
 }
 
 header {
@@ -88,27 +81,43 @@ main {
     grid-area: text;
 }
 
-h1 {
-    color: #8e44ad;
-}
-
-.img-container {
-    height: 10%;
-    clip-path: circle(20%);
-}
-
 #circle{
     background: url("./images/0209.jpg");
     background-repeat: no-repeat;
     background-size: 100% 110%;
     background-position: center;
     border-radius: 50%;
-    height: 120px;
-    width: 120px;
+    height: 40%;
+    width: 40%;
     margin: 0 0 0 60%;
 }
 
 #logo {
-    height: 100px;
-    margin: 0 0 50px 0;
+    height: 50%;
+    margin: 0 0 0 10%;
+}
+
+.vid-container {
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    background: lightcoral; /*to erase*/
+}
+
+.p-container {
+    padding: 2%;
+    font-size: 1.4em;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.titles {
+    color: rgb(255, 230, 0);
+}
+
+.titles-projects {
+    color: #e74c3c;
 }
